feat: added some one

--- a/public/assets/css/shop.css
+++ b/public/assets/css/shop.css
@@ -2,7 +2,7 @@
   display: none;
   padding: 5px;
   border: none;
-  border-radius: 30x;
+  border-radius: 30px;
   margin-left: 20px;
   margin-top: 20px;
   /* background-color: inherit; */
